--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMElI0kmyZzauckTkT/xk3+",
+      "authorship_tag": "ABX9TyOD6YEy+dTxmB5rTTlzFZW9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,27 +29,24 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install yfinance"
+        "print(\"testing\")"
       ],
       "metadata": {
-        "id": "OPsiVcKew87E"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XazDq8-bOU01",
+        "outputId": "b39447e8-2e4b-440c-cacc-76b9c43e67b0"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "HyKSr2RAwgAF"
-      },
-      "outputs": [],
-      "source": [
-        "import yfinance as yf\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from datetime import datetime\n",
-        "import matplotlib as plt"
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "testing\n"
+          ]
+        }
       ]
     }
   ]
