added loadStockData function

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOw4RVdStgaFTc6/y7zk8Us",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/artemmiyy/psu_quants/blob/main/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lhartson03/psu_quants/blob/main/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,6 +39,37 @@
     {
       "cell_type": "code",
       "source": [
+        "y_symbols = ['AAPL']\n",
+        "startdate = datetime(2013,3,16)\n",
+        "AAPL = pdr.get_data_yahoo(y_symbols, start = startdate)\n",
+        "\n",
+        "# loads Stock price data \n",
+        "def loadStockData(tickerList,startDate):\n",
+        "  for ticker in tickerList: \n",
+        "    tickerList[ticker] = pdr.get_data_yahoo(ticker, start = startdate)['Adj Close']\n",
+        "    pdr.get_data_yahoo()\n"
+      ],
+      "metadata": {
+        "outputId": "302d90c6-83e3-46ff-e88e-cf08ce9cb9c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NhUeBsEtz9HO"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from pandas_datareader import data as pdr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -51,7 +81,7 @@
       "metadata": {
         "id": "xjDkhUK-xwFt"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +122,7 @@
           "height": 237
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +323,7 @@
       "metadata": {
         "id": "mx9AxqUjy4ap"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +339,7 @@
           "height": 237
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +552,7 @@
           "height": 335
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +592,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +645,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +664,7 @@
       "metadata": {
         "id": "X7PYVLQL047v"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +708,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +742,7 @@
           "height": 384
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +782,7 @@
           "height": 237
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +962,7 @@
       "metadata": {
         "id": "9Fbcx0Zg4VDZ"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,7 +977,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +1000,7 @@
       "metadata": {
         "id": "-nM3cqvs47HP"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -985,7 +1015,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,7 +1055,7 @@
       "metadata": {
         "id": "i4me-8SR5-OP"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1066,7 @@
       "metadata": {
         "id": "AJAsg4ZK8GK0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1081,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
