edited load_us_stock_data to load everything instead of only adjusted close

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/artemmiyy/psu_quants/blob/main/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/artemmiyy/psu_quants/blob/investing/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -71,13 +71,13 @@
         "\n",
         "def load_us_stock_data(tickerList, start_date):\n",
         "  stocks_data = pd.DataFrame()\n",
-        "  stocks_data = pdr.get_data_yahoo(tickerList, start = start_date)['Adj Close']\n",
+        "  stocks_data = pdr.get_data_yahoo(tickerList, start = start_date)\n",
         "  return stocks_data"
       ],
       "metadata": {
         "id": "9jbT2f439UdL"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "S2WM1TZk41U5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "Wji4A5wBoKRB"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
