added end_date argument for all current analysis function

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -65,27 +65,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# loads US stock price data into pandas dataframe \n",
-        "# tickerList is list of US Tickers \n",
-        "# default interval is 1 day for price and period \n",
+        "# loads US stock price data into a pandas dataframe\n",
+        "# default interval is 1 day for price and period\n",
+        "# Example query: load_us_stock_data('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
         "\n",
-        "def load_us_stock_data(tickerList, start_date):\n",
+        "def load_us_stock_data(ticker, start_date, end_date):\n",
         "  stocks_data = pd.DataFrame()\n",
-        "  stocks_data = pdr.get_data_yahoo(tickerList, start = start_date)\n",
+        "  stocks_data = pdr.get_data_yahoo(ticker, start = start_date, end = end_date)\n",
         "  return stocks_data"
       ],
       "metadata": {
         "id": "9jbT2f439UdL"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# takes a dataframe with stock price data and a datetime startdate\n",
-        "def us_stock_avg_return(ticker, start_date):\n",
-        "  stock_df = load_us_stock_data(ticker, start_date)\n",
+        "# Example query: us_avg_stock_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "\n",
+        "def us_stock_avg_return(ticker, start_date, end_date):\n",
+        "  stock_df = load_us_stock_data(ticker, start_date, end_date)\n",
         "  daily_returns = (stock_df / stock_df.shift(1)) - 1\n",
         "  avg_annual_stock_return = daily_returns.mean() * 250\n",
         "  return avg_annual_stock_return"
@@ -93,22 +95,24 @@
       "metadata": {
         "id": "S2WM1TZk41U5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# plots a daily return of a US stock. Example: plot_daily_return('AAPL', datetime(2000, 12, 16))\n",
-        "def plot_daily_return(ticker, start_date):\n",
-        "  stock_df = load_us_stock_data(ticker, start_date)\n",
+        "# plots a daily return of a US stock. \n",
+        "# Example query: plot_daily_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "\n",
+        "def plot_daily_return(ticker, start_date, end_date):\n",
+        "  stock_df = load_us_stock_data(ticker, start_date, end_date)\n",
         "  daily_returns = (stock_df / stock_df.shift(1)) - 1\n",
         "  daily_returns.plot(figsize = (12,6))"
       ],
       "metadata": {
         "id": "Wji4A5wBoKRB"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
