added a personal note

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -28,6 +28,17 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"kpatel103's edit\")"
+      ],
+      "metadata": {
+        "id": "bFWuxUcD8GxO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_1 = [1,2,3,4,5]"
       ],
       "metadata": {
