Updated the Portfolio to include more statistics w/ formatting

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/artemmiyy/psu_quants/blob/investing/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MattWestCode/psu_quants/blob/investing/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "xjDkhUK-xwFt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,14 @@
         "\n",
         "  def portfolio_report(self):\n",
         "    print(\"Portfolio Name: {name}\".format(name = self.name))\n",
+        "    print(\"Portfolio AUM: ${aum}\".format(aum = self.AUM))\n",
+        "    print(\"\\nPortfolio Statistics:\")\n",
         "    print(\"Portfolio Return: {total_return}%\".format(total_return = self.total_return))\n",
+        "    print(\"Portfolio Beta: {beta}\".format(beta = self.portfolio_beta))\n",
+        "    print(\"Portfolio Profit-Loss: ${profit_loss}\".format(profit_loss = self.profit_loss))\n",
+        "    print(\"Portfolio Sharpe Ratio: {sharpe_ratio}\".format(sharpe_ratio = self.sharpe_ratio))\n",
+        "    print(\"Portfolio Expense Ratio: {expense_ratio}\".format(expense_ratio = self.expense_ratio))\n",
+        "    print(\"Portfolio Average P/E: {avg_price_to_earnings}\".format(avg_price_to_earnings= self.avg_price_to_earnings))\n",
         "    #etc.\n",
         "\n",
         "  # calculates the weight of the portfolio's securities\n",
