--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MattWestCode/psu_quants/blob/investing/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MattWestCode/Matt_psu_quants_fork/blob/investing/Quant_Paper_Portfolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,13 +61,13 @@
         "    self.name = name\n",
         "    self.cash = cash\n",
         "    self.AUM = None\n",
-        "    self.portfolio_beta = None\n",
-        "\n",
+        "  \n",
         "    self.positions_price = {}\n",
         "    self.us_stocks_portfolio_weight = {}\n",
         "    self.positions_quantity = {}\n",
         "    self.us_stocks_trades = {} #{\"AAPL\": [[id1, price paid, qty, date], [id2, -price paid, qty, date]]}\n",
         "    \n",
+        "    self.portfolio_beta = None\n",
         "    self.profit_loss = None\n",
         "    self.sharpe_ratio = None\n",
         "    self.total_return = None\n",
@@ -75,10 +75,12 @@
         "    self.avg_price_to_earnings = None\n",
         "    \n",
         "\n",
+        "  # Calculates the return of the portfolio from inception\n",
         "  def calculate_return(self):\n",
         "    return None\n",
         "\n",
         "\n",
+        "  # Calculates the value of securities\n",
         "  def calculate_securities(self):\n",
         "    total_value = 0\n",
         "    for ticker in self.positions_price:\n",
@@ -86,17 +88,20 @@
         "    return total_value\n",
         "    \n",
         "\n",
-        "  # calculates assets under management\n",
+        "  # Calculates assets under management\n",
         "  def calculate_AUM(self):\n",
         "    self.AUM = self.cash + self.calculate_securities()\n",
-        "    print(self.AUM)\n",
         "    return self.AUM\n",
+        "\n",
         "\n",
         "  def performance_vs_benchmark(self, start_date, end_date, benchmark):\n",
         "    return None\n",
         "\n",
+        "\n",
+        "  # Finds a specific trade made\n",
         "  def find_us_stock_trade(self, ticker, id):\n",
         "    return None\n",
+        "\n",
         "\n",
         "  # Buys a stock at designated price for X shares\n",
         "  def buy_us_stock_position(self, ticker, price, quantity):\n",
@@ -105,10 +110,6 @@
         "        self.positions_price[ticker] = price\n",
         "        self.positions_quantity[ticker] = quantity\n",
         "        self.cash = self.cash - (price * quantity)\n",
-        "        print(\"Check:\")\n",
-        "        print(self.positions_price)\n",
-        "        print(self.positions_quantity)\n",
-        "        print(self.cash)\n",
         "        return self.positions_price, self.positions_quantity\n",
         "      else:\n",
         "        total_price = (price * quantity) + (self.positions_quantity[ticker] * self.positions_price[ticker])\n",
@@ -120,6 +121,7 @@
         "    else:\n",
         "      print(f\"You do not have enough cash to buy '{ticker}'\")\n",
         "\n",
+        "\n",
         "  # Sells a stock at designated price for X shares\n",
         "  def sell_us_stock_position(self, ticker, price, quantity):\n",
         "    if ticker not in self.positions_price:\n",
@@ -129,12 +131,37 @@
         "      self.cash = self.cash + (price * quantity)\n",
         "      return self.positions_price, self.positions_quantity, self.cash\n",
         "\n",
+        "\n",
         "  def calculate_sharpe_ratio(self, risk_free_rate): \n",
         "    # utilize total return, total volatility, and risk free rate\n",
         "    # updates sharpe ratio attribute\n",
         "    return None\n",
         "\n",
+        "\n",
+        "  # Calculates the weight of only the portfolio's securities\n",
+        "  def positions_weight(self):\n",
+        "    for ticker in self.positions_price:\n",
+        "      ticker_weight = round((self.positions_price[ticker] * self.positions_quantity[ticker])/self.calculate_securities(),6) * 100\n",
+        "      print(f\"{ticker}: {ticker_weight}%\")\n",
+        "      \n",
+        "  \n",
+        "  def graph_us_stocks_holdings(self):\n",
+        "    # utilize matplotlib to graph\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "  def trailing_performance(self, end_date, start_date):\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "  # Needs Work!\n",
+        "  def calculate_all_statistics(self):\n",
+        "    return self.calculate_AUM(), self.calculate_return(), self.calculate_sharpe_ratio(.347) #etc.\n",
+        "\n",
+        "\n",
+        "  # Calls \"calculates_all_statistics()\" so statistcis are up-to-date when pulling data\n",
         "  def portfolio_report(self):\n",
+        "    self.calculate_all_statistics()\n",
         "    print(\"Portfolio Name: {name}\".format(name = self.name))\n",
         "    print(\"Portfolio AUM: ${aum}\".format(aum = self.AUM))\n",
         "    print(\"\\nPortfolio Statistics:\")\n",
@@ -144,60 +171,41 @@
         "    print(\"Portfolio Sharpe Ratio: {sharpe_ratio}\".format(sharpe_ratio = self.sharpe_ratio))\n",
         "    print(\"Portfolio Expense Ratio: {expense_ratio}\".format(expense_ratio = self.expense_ratio))\n",
         "    print(\"Portfolio Average P/E: {avg_price_to_earnings}\".format(avg_price_to_earnings= self.avg_price_to_earnings))\n",
-        "    #etc.\n",
+        "    \n",
         "\n",
-        "  # calculates the weight of the portfolio's securities\n",
-        "  def positions_weight(self):\n",
-        "    for ticker in self.positions_price:\n",
-        "      ticker_weight = round((self.positions_price[ticker] * self.positions_quantity[ticker])/self.calculate_securities(),6) * 100\n",
-        "      print(f\"{ticker}: {ticker_weight}%\")\n",
-        "      \n",
+        "# # # #    TEST AREA    # # # #\n",
         "\n",
-        "  def graph_us_stocks_holdings(self):\n",
-        "    # utilize matplotlib to graph\n",
-        "    return None\n",
+        "matt = Portfolio(\"Matt's Portfolio\", 100000)\n",
+        "matt.portfolio_report()\n",
         "\n",
-        "  def trailing_performance(self, end_date, start_date):\n",
-        "    return None\n",
         "\n",
-        "# Tests\n",
-        "matt = Portfolio('Matts Portfolio', 100000)\n",
         "\n",
-        "matt.buy_us_stock_position('APPL', 50, 50)\n",
-        "matt.buy_us_stock_position('GM', 125, 50)\n",
-        "matt.buy_us_stock_position('META', 50, 1500)\n",
-        "matt.buy_us_stock_position('META', 50, 150000000)\n",
-        "matt.positions_weight()\n"
+        "  \n",
+        "\n"
       ],
       "metadata": {
         "id": "IqwWW7KE2ps1",
-        "outputId": "03bf9d20-5fbc-4985-999e-a32bfb43ff0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "63c5c27c-c432-4c49-fda9-b7d4009591d3"
       },
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Check:\n",
-            "{'APPL': 50}\n",
-            "{'APPL': 50}\n",
-            "97500\n",
-            "Check:\n",
-            "{'APPL': 50, 'GM': 125}\n",
-            "{'APPL': 50, 'GM': 50}\n",
-            "91250\n",
-            "Check:\n",
-            "{'APPL': 50, 'GM': 125, 'META': 50}\n",
-            "{'APPL': 50, 'GM': 50, 'META': 1500}\n",
-            "16250\n",
-            "You do not have enough cash to buy 'META'\n",
-            "APPL: 2.9851%\n",
-            "GM: 7.4627%\n",
-            "META: 89.5522%\n"
+            "Portfolio Name: Matt's Portfolio\n",
+            "Portfolio AUM: $100000\n",
+            "\n",
+            "Portfolio Statistics:\n",
+            "Portfolio Return: None%\n",
+            "Portfolio Beta: None\n",
+            "Portfolio Profit-Loss: $None\n",
+            "Portfolio Sharpe Ratio: None\n",
+            "Portfolio Expense Ratio: None\n",
+            "Portfolio Average P/E: None\n"
           ]
         }
       ]
