> Updated buy/sell function > Added display of all transactions (made a list instead of dict and added self.total_transactions to help add id to each transaction)

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "xjDkhUK-xwFt"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -61,11 +61,12 @@
         "    self.name = name\n",
         "    self.cash = cash\n",
         "    self.AUM = None\n",
-        "  \n",
+        "\n",
         "    self.positions_price = {}\n",
         "    self.us_stocks_portfolio_weight = {}\n",
         "    self.positions_quantity = {}\n",
-        "    self.us_stocks_trades = {} #{\"AAPL\": [[id1, price paid, qty, date], [id2, -price paid, qty, date]]}\n",
+        "    self.total_transactions = 0\n",
+        "    self.us_stocks_trades = [] #{\"AAPL\": [[id1, price paid, qty, date], [id2, -price paid, qty, date]]}\n",
         "    \n",
         "    self.portfolio_beta = None\n",
         "    self.profit_loss = None\n",
@@ -74,7 +75,6 @@
         "    self.expense_ratio = None\n",
         "    self.avg_price_to_earnings = None\n",
         "    \n",
-        "\n",
         "  # Calculates the return of the portfolio from inception\n",
         "  def calculate_return(self):\n",
         "    return None\n",
@@ -110,14 +110,20 @@
         "        self.positions_price[ticker] = price\n",
         "        self.positions_quantity[ticker] = quantity\n",
         "        self.cash = self.cash - (price * quantity)\n",
-        "        return self.positions_price, self.positions_quantity\n",
+        "\n",
         "      else:\n",
         "        total_price = (price * quantity) + (self.positions_quantity[ticker] * self.positions_price[ticker])\n",
         "        total_shares = quantity + self.positions_quantity[ticker]\n",
         "        self.positions_price[ticker] = total_price / (total_shares)\n",
         "        self.positions_quantity[ticker] = total_shares\n",
         "        self.cash = self.cash - (price * quantity)\n",
-        "        return self.positions_price, self.positions_quantity, self.cash\n",
+        "      \n",
+        "      id = self.total_transactions + 1\n",
+        "      self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price paid\": price, \"quantity\": quantity})\n",
+        "      self.total_transactions += 1\n",
+        "      \n",
+        "      return self.positions_price, self.positions_quantity, self.cash, self.us_stocks_trades\n",
+        "    \n",
         "    else:\n",
         "      print(f\"You do not have enough cash to buy '{ticker}'\")\n",
         "\n",
@@ -129,6 +135,11 @@
         "    else:\n",
         "      self.positions_quantity[ticker] = self.positions_quantity[ticker] - quantity\n",
         "      self.cash = self.cash + (price * quantity)\n",
+        "      \n",
+        "      id = self.total_transactions + 1\n",
+        "      self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price sold\": price, \"quantity\": quantity})\n",
+        "      self.total_transactions += 1\n",
+        "      \n",
         "      return self.positions_price, self.positions_quantity, self.cash\n",
         "\n",
         "\n",
@@ -152,6 +163,11 @@
         "\n",
         "  def trailing_performance(self, end_date, start_date):\n",
         "    return None\n",
+        "\n",
+        "  \n",
+        "  # Would make the display of the transactions cleaner\n",
+        "  def display_transactions(self):\n",
+        "    pass\n",
         "\n",
         "\n",
         "  # Needs Work!\n",
@@ -178,6 +194,10 @@
         "matt = Portfolio(\"Matt's Portfolio\", 100000)\n",
         "matt.portfolio_report()\n",
         "\n",
+        "matt.buy_us_stock_position('APPL', 50, 50)\n",
+        "matt.buy_us_stock_position('GM', 125, 50)\n",
+        "matt.sell_us_stock_position('APPL', 75, 50)\n",
+        "print(matt.us_stocks_trades)\n",
         "\n",
         "\n",
         "  \n",
@@ -188,7 +208,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63c5c27c-c432-4c49-fda9-b7d4009591d3"
+        "outputId": "0a9d3641-df86-461f-d10d-e71c8ed4004c"
       },
       "execution_count": 13,
       "outputs": [
@@ -205,10 +225,20 @@
             "Portfolio Profit-Loss: $None\n",
             "Portfolio Sharpe Ratio: None\n",
             "Portfolio Expense Ratio: None\n",
-            "Portfolio Average P/E: None\n"
+            "Portfolio Average P/E: None\n",
+            "[{'id': 1, 'ticker': 'APPL', 'price paid': 50, 'quantity': 50}, {'id': 2, 'ticker': 'GM', 'price paid': 125, 'quantity': 50}, {'id': 3, 'ticker': 'APPL', 'price sold': 75, 'quantity': 50}]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cW8NRDloF7nS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
