Fixed us_stock_trades to use a dictionary with embedded lists

--- a/Quant_Paper_Portfolio.ipynb
+++ b/Quant_Paper_Portfolio.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "xjDkhUK-xwFt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "    self.us_stocks_portfolio_weight = {}\n",
         "    self.positions_quantity = {}\n",
         "    self.total_transactions = 0\n",
-        "    self.us_stocks_trades = [] #{\"AAPL\": [[id1, price paid, qty, date], [id2, -price paid, qty, date]]}\n",
+        "    self.us_stocks_trades = {} #{\"AAPL\": [[id1, price paid, qty, date], [id2, -price paid, qty, date]]}\n",
         "    \n",
         "    self.portfolio_beta = None\n",
         "    self.profit_loss = None\n",
@@ -110,7 +110,7 @@
         "        self.positions_price[ticker] = price\n",
         "        self.positions_quantity[ticker] = quantity\n",
         "        self.cash = self.cash - (price * quantity)\n",
-        "\n",
+        "        self.us_stocks_trades[ticker] = []\n",
         "      else:\n",
         "        total_price = (price * quantity) + (self.positions_quantity[ticker] * self.positions_price[ticker])\n",
         "        total_shares = quantity + self.positions_quantity[ticker]\n",
@@ -119,7 +119,9 @@
         "        self.cash = self.cash - (price * quantity)\n",
         "      \n",
         "      id = self.total_transactions + 1\n",
-        "      self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price paid\": price, \"quantity\": quantity})\n",
+        "      appended_list = self.us_stocks_trades[ticker]\n",
+        "      appended_list.append([id, price, quantity])\n",
+        "      self.us_stocks_trades[ticker] = appended_list\n",
         "      self.total_transactions += 1\n",
         "      \n",
         "      return self.positions_price, self.positions_quantity, self.cash, self.us_stocks_trades\n",
@@ -137,9 +139,11 @@
         "      self.cash = self.cash + (price * quantity)\n",
         "      \n",
         "      id = self.total_transactions + 1\n",
-        "      self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price sold\": price, \"quantity\": quantity})\n",
+        "      appended_list = self.us_stocks_trades[ticker]\n",
+        "      appended_list.append([id, -price, quantity])\n",
+        "      self.us_stocks_trades[ticker] = appended_list\n",
         "      self.total_transactions += 1\n",
-        "      \n",
+        "     \n",
         "      return self.positions_price, self.positions_quantity, self.cash\n",
         "\n",
         "\n",
@@ -188,6 +192,9 @@
         "    print(\"Portfolio Expense Ratio: {expense_ratio}\".format(expense_ratio = self.expense_ratio))\n",
         "    print(\"Portfolio Average P/E: {avg_price_to_earnings}\".format(avg_price_to_earnings= self.avg_price_to_earnings))\n",
         "    \n",
+        "# Scraped Code for buy sell methods\n",
+        "# self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price sold\": price, \"quantity\": quantity})\n",
+        "# self.us_stocks_trades.append({\"id\": id, \"ticker\": ticker, \"price paid\": price, \"quantity\": quantity})\n",
         "\n",
         "# # # #    TEST AREA    # # # #\n",
         "\n",
@@ -196,7 +203,14 @@
         "\n",
         "matt.buy_us_stock_position('APPL', 50, 50)\n",
         "matt.buy_us_stock_position('GM', 125, 50)\n",
+        "\n",
+        "print(matt.positions_price)\n",
+        "print(matt.positions_quantity)\n",
+        "print(matt.positions_weight())\n",
+        "print(matt.us_stocks_trades)\n",
+        "\n",
         "matt.sell_us_stock_position('APPL', 75, 50)\n",
+        "\n",
         "print(matt.us_stocks_trades)\n",
         "\n",
         "\n",
@@ -208,9 +222,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a9d3641-df86-461f-d10d-e71c8ed4004c"
+        "outputId": "7601696a-a018-4abe-d305-2d586b5e4dd8"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +240,13 @@
             "Portfolio Sharpe Ratio: None\n",
             "Portfolio Expense Ratio: None\n",
             "Portfolio Average P/E: None\n",
-            "[{'id': 1, 'ticker': 'APPL', 'price paid': 50, 'quantity': 50}, {'id': 2, 'ticker': 'GM', 'price paid': 125, 'quantity': 50}, {'id': 3, 'ticker': 'APPL', 'price sold': 75, 'quantity': 50}]\n"
+            "{'APPL': 50, 'GM': 125}\n",
+            "{'APPL': 50, 'GM': 50}\n",
+            "APPL: 28.571400000000004%\n",
+            "GM: 71.4286%\n",
+            "None\n",
+            "{'APPL': [[1, 50, 50]], 'GM': [[2, 125, 50]]}\n",
+            "{'APPL': [[1, 50, 50], [3, -75, 50]], 'GM': [[2, 125, 50]]}\n"
           ]
         }
       ]
